axion-manifests/db/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: axion
  labels:
    app: postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          imagePullPolicy: Always

          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "400m"
              memory: "1Gi"

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"

            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"

            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          # PostgreSQL persistent data
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

            # SQL initialization scripts
            - name: postgres-init-sql
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

        - name: postgres-init-sql
          configMap:
            name: postgres-init-sql
