axion-manifests/db/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: "/misc/ping"
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
      
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: dev.pgadm.theakkc.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-svc
                port:
                  number: 80
